bug #21459 (r=warren).  Made the consumer OnStopRequest fire before the channel is removed from the loadgroup...